Chnaged A and B of havok to A_H and B_H

--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -115,6 +115,8 @@
         \bm{\Omega} \approx \Tilde{\bm{U}} \Tilde{\bm{\Sigma}} \Tilde{\bm{V}}^T ,
     \end{equation}
     where $\phantom{.} \Tilde{ } \phantom{.}$ represents rank-$p$ truncation.
+    For the $\bm{U}$ and $\bm{V}$ matrices, rank-$p$ truncation refers to keeping only the first $p$ number of columns and truncating the rest.
+    Rank-$p$ truncation of the $\bm{S}$ matrix refers to keeping the first $p$ number of columns and rows and truncating the rest.
     % \murray{maybe insert colour pictures showing matrices ??}        
 
     \paragraph
