--- a/frontmatter/masters_title_page.tex
+++ b/frontmatter/masters_title_page.tex
@@ -10,7 +10,7 @@
 		
 		~\vspace{-2em}
 		
-		{\sffamily \bfseries \huge Data-Driven System Identification and Model Predictive Control of a Quadrotor with an Unknown Suspended Payload \par}
+		{\sffamily \bfseries \huge Data-Driven System Identification and Model Predictive Control of a Multirotor with an Unknown Suspended Payload \par}
 %		{\scshape \huge A Critical Analysis of Design Flaws in the Death Star \par}		
 		
 		\vspace{4em}
