--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -74,10 +74,10 @@
     $l$ can be determined from Equation~\ref{eq:nat_freq}.
     The estimated length for this simulation is \SI{0.953}{\metre}.
     The actual cable length is \SI{1}{\metre}, therefore this estimation has an error of 4.7\%.
-    As documented \cite{Erasmus2020} and \cite{Slabber2020}, an error of this magnitude is acceptably small
+    As documented by \cite{Erasmus2020} and \cite{Slabber2020}, an error of this magnitude is acceptably small
     and still results in effective control with a \gls{LQR}.
-    It is also shown by \cite{Erasmus2020} and \cite{Slabber2020} that this estimation method 
-    is effective for a range of different payloads.
+    It was also shown by \cite{Erasmus2020} and \cite{Slabber2020} that this estimation method 
+    is effective for a range of different payloads in simulation.
 
     \input{system_id/plots/FFT_vel_step_subfigs}
 
